apps/staging/networkpolicy-cnpg-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: clients-db-staging-allow-cnpg-operator
  namespace: clients-staging
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: clients-db-staging
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: cloudnative-pg
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - protocol: TCP
          port: 8000
